syntax = "proto3";

package monitoring.v1;

option go_package = "github.com/tkeel-io/tkeel-monitor/api/monitoring/v1;v1";

// @plugins=protoc-gen-go-errors
// 错误
enum Error {
  // 未知类型
  // @code=UNKNOWN
  MONITORING_ERR_UNKNOWN = 0;
  // 找不到资源
  // @code=NOT_FOUND
  MONITORING_ERR_NOT_FOUND = 1;
  // 参数错误
  // @code=INVALID_ARGUMENT
  MONITORING_ERR_INVALID_ARGUMENT = 2;
  // 内部错误
  // @code=INTERNAL
  MONITORING_ERR_INTERNAL = 3;
  // 序列化ks数据错误
  // @code=INTERNAL
  MONITORING_ERR_KS_MARSHAL = 4;
  // ks接口错误
  // @code=INTERNAL
  MONITORING_ERR_KS_INVOKE = 5;
}